# rust-swift-pb-interop

./: README.md  build.sh
protos/: DataModel.proto
rust/: .gitignore  Cargo.toml
rust/src/: async_dispatch.rs  async_handlers.rs  lib.rs  sync_dispatch.rs  sync_handlers.rs
swift/InteropApp/: .gitignore
swift/InteropApp/InteropApp/: ContentView.swift  InteropAppApp.swift  RustCall.swift
swift/InteropApp/InteropApp.xcodeproj/: project.pbxproj
swift/InteropApp/InteropApp.xcodeproj/project.xcworkspace/xcuserdata/bugenzhao.xcuserdatad/: UserInterfaceState.xcuserstate
swift/InteropApp/InteropApp.xcodeproj/xcshareddata/xcschemes/: InteropApp.xcscheme
swift/InteropApp/InteropApp.xcodeproj/xcuserdata/bugenzhao.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
swift/InteropApp/InteropApp.xcodeproj/xcuserdata/bugenzhao.xcuserdatad/xcschemes/: xcschememanagement.plist
swift/InteropApp/InteropAppTests/: InteropAppTests.swift  RustCallTests.swift
swift/InteropApp/InteropAppUITests/: InteropAppUITests.swift
swift/InteropApp/InteropAppiOSTests/: InteropAppiOSTests.swift
