[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust"
crate-type = ["staticlib", "cdylib"]

[dependencies]
lazy_static = "1.4.0"
protobuf = "2.24.1"
tokio = { version="1.7.1", features=["rt-multi-thread", "time"] }

[build-dependencies]
cbindgen = "0.19.0"
protoc-rust = "2.24.1"
